Revert "Fixes the search box overlapping with content when first shown (#666)"
This reverts commit 7f82a197b921cbff05eea63dfc7a409bf692d7f9.

--- a/src/theme/stylus/searchbar.styl
+++ b/src/theme/stylus/searchbar.styl
@@ -21,7 +21,6 @@ mark.fade-out {
     margin-left: auto;
     margin-right: auto;
     max-width: $content-max-width;
-    display: block;
 }
 
 #searchbar {
@@ -65,4 +64,3 @@ ul#searchresults {
         font-style: normal;
     }
 }
-
